deployment_rabbit.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
  namespace: micro
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      restartPolicy: Always
      containers:
      - image: rabbitmq:3.5.3-management
        imagePullPolicy: IfNotPresent
        name: rabbitmq
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rabbitmq
  name: rabbitmq
  namespace: micro
spec:
  type: ClusterIP
  ports:
    - port: 5672
      targetPort: 5672
  selector:
    app: rabbitmq
  sessionAffinity: None
