deployment_zipkin.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: zipkin
  name: zipkin
  namespace: micro
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      restartPolicy: Always
      containers:
      - image: openzipkin/zipkin:latest
        imagePullPolicy: IfNotPresent
        name: zipkin
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zipkin
  name: zipkin
  namespace: micro
spec:
  type: ClusterIP
  ports:
    - port: 9411
      targetPort: 9411
  selector:
    app: zipkin
  sessionAffinity: None
