deployment_ingress_aws.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: micro
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
      - path: /currency-exchange/*
        backend:
          serviceName: currency-exchange-service
          servicePort: 8000          
      - path: /currency-converter/*
        backend:
          serviceName: currency-conversion-service
          servicePort: 8100
